[package]
name = "indexed-pool"
version = "0.1.0"
authors = ["Matteo Bigoi <bigo@crisidev.org>"]
description = "Utility to copy files over WiFi to/from mobile devices inside a terminal."
documentation = "https://docs.rs/indexed-pool"
readme = "README.md"
homepage = "https://github.com/crisidev/indexed-pool"
repository = "https://github.com/crisidev/indexed-pool"
license = "MIT"
keywords = ["library", "concurrency", "pool", "cache"]
categories = ["concurrency", "caching", "memory-management"]
edition = "2018"

[dependencies]
log = "0.4"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }

[dev-dependencies]
pretty_assertions = "0.6"
